# LearnCraft

./: .gitignore  CMakeLists.txt  README.md  build_debug.bat  build_release.sh  conanfile.txt  make_debug.bat  make_debug.sh  make_release.bat  make_release.sh  setup.bat  setup.sh  test.bat  xmake.lua
game/core/: mod.lua
scripts/: init.lua  mods.lua
scripts/game/core/: voxels.lua
src/: imgui_main.cpp  main.cpp
src/common/: Application.cpp  Application.h  Camera.h  HashTuple.h  NoiseTool.cpp  NoiseTool.h  Shader.hpp  TypeManager.h  types.h
src/common/Perlin_Noise/: PerlinNoise.h  ppm.cpp
src/common/world/: Chunk.cpp  Chunk.h  ChunkGenerator.h  ChunkRender.h  TextureManager.h  VoxelManager.h  World.cpp  World.h  WorldConfig.h  WorldTypes.h  WorldUtils.cpp  WorldUtils.h
src/game/: DrawDebug.cpp  DrawDebug.h  ExportToLua.h  GameApplication.cpp  GameApplication.h  Terrain.h  entities.h  gameplay.cpp  gameplay.h
src/game/comp/: ChunkIndexComponent.h  ChunkInit.h  ChunkInitComponent.h  ChunkMeshInit.h  ChunkMeshInitComponent.h  ChunkRenderComponent.h  ChunkVoxelEntities.h  ChunkVoxelEntitiesComponent.h  PositionComponent.h  RotationComponent.h  RuntimeVoxelTextureLayer.h  RuntimeVoxelTextureLayerComponent.h  VoxelData.h  VoxelDataComponent.h  chunk_index.h  position.h  render.h
src/game/sys/: ChunkInitSystem.h  ChunkMeshInitSystem.h  ChunkRenderSystem.h  chunk_render.h
src/scripts/: api.lua
src/scripts/game/core/: init.lua
tests/: CMakeLists.txt  demo.cpp
